added official update subtitle

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <h2>This is an official update!</h2>
     <script src="app.js"></script>
 </body>
 </html>
